--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -173,15 +173,15 @@ jobs:
       - <<: *restore-gems-cache
       - <<: *ruby-dependencies
       - <<: *save-gems-cache
-      restore_cache:
-        key: dependencies-{{ checksum "../package.json" }}
+      - restore_cache:
+          key: dependencies-{{ checksum "../package.json" }}
       - run:
           name: Install dependencies
           command: yarn install
-      save_cache:
-        paths:
-          - ../node_modules
-        key: dependencies-{{ checksum "../package.json" }}
+      - save_cache:
+          paths:
+            - ../node_modules
+          key: dependencies-{{ checksum "../package.json" }}
       - run:
           name: Generate .env
           command: node ./scripts/generate-dotenv.js
@@ -219,15 +219,15 @@ jobs:
       - <<: *restore-gems-cache
       - <<: *ruby-dependencies
       - <<: *save-gems-cache
-      - run: 
-          command: cd ../
-      - <<: *get-cache
+      - restore_cache:
+          key: dependencies-{{ checksum "../package.json" }}
       - run:
           name: Install dependencies
           command: yarn install
-      - <<: *save-cache
-      - run:
-          command: cd ./ios/
+      - save_cache:
+          paths:
+            - ../node_modules
+          key: dependencies-{{ checksum "../package.json" }}
       - run:
           name: Generate .env
           command: node ./scripts/generate-dotenv.js
@@ -276,7 +276,15 @@ jobs:
           command: |
               yarn global add detox-cli
               yarn global add react-native-cli
-      - run: yarn
+      - restore_cache:
+          key: dependencies-{{ checksum "../package.json" }}
+      - run:
+          name: Install dependencies
+          command: yarn install
+      - save_cache:
+          paths:
+            - ../node_modules
+          key: dependencies-{{ checksum "../package.json" }}
       - run:
           name: Generate .env
           command: node ./scripts/generate-dotenv.js
