--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "test": "jest src --maxWorkers=2",
     "test:e2e": "yarn test:e2e:build && yarn test:e2e:run",
     "test:e2e:dev": "detox test --reuse",
-    "test:e2e:run": "detox test -c ios.sim.debug",
+    "test:e2e:run": "detox test -c ios.sim.release",
     "test:e2e:build": "detox build",
     "precommit": "lint-staged",
     "lint": "eslint src",
@@ -109,6 +109,14 @@
     "test-runner": "jest",
     "runner-config": "e2e/config.json",
     "configurations": {
+      "ios.sim.release": {
+        "binaryPath":
+          "ios/build/Build/Products/Release-iphonesimulator/example.app",
+        "build":
+          "export RCT_NO_LAUNCH_PACKAGER=true && xcodebuild -project ios/PrideLondonApp.xcodeproj -scheme PrideLondonApp -configuration Release -sdk iphonesimulator -derivedDataPath ios/build -quiet",
+        "type": "ios.simulator",
+        "name": "iPhone 7"
+      },
       "ios.sim.debug": {
         "binaryPath":
           "ios/build/Build/Products/Debug-iphonesimulator/PrideLondonApp.app",
