--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "test:e2e": "yarn test:e2e:build && yarn test:e2e:run",
     "test:e2e:dev": "detox test --reuse",
     "test:e2e:run": "detox test -c ios.sim.release",
-    "test:e2e:build": "detox build",
+    "test:e2e:build": "detox build -c ios.sim.release",
     "precommit": "lint-staged",
     "lint": "eslint src",
     "flow": "flow src",
