--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -289,6 +289,7 @@ jobs:
           name: Generate .env
           command: node ./scripts/generate-dotenv.js
           working_directory: /Users/distiller/project
+      - run: echo -e "$FABRIC_API_KEY\n$FABRIC_BUILD_SECRET" >> ./PrideLondonApp/fabric.properties
       - run: yarn test:e2e
 
 workflows:
