--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,19 +1,19 @@
 get-cache: &get-cache
   restore_cache:
-    key: dependencies-{{ checksum "yarn.lock" }}
+    key: dependencies-{{ checksum "package.json" }}
 save-cache: &save-cache
   save_cache:
     paths:
       - node_modules
-    key: dependencies-{{ checksum "yarn.lock" }}
+    key: dependencies-{{ checksum "package.json" }}
 get-cache-osx: &get-cache-osx
   restore_cache:
-    key: osx-dependencies-{{ checksum "../yarn.lock" }}
+    key: osx-dependencies-{{ checksum "../package.json" }}
 save-cache-osx: &save-cache-osx
   save_cache:
     paths:
       - /Users/distiller/project/node_modules
-    key: osx-dependencies-{{ checksum "../yarn.lock" }}
+    key: osx-dependencies-{{ checksum "../package.json" }}
 android-secrets: &android-secrets
   run: 
     command: |
@@ -277,14 +277,14 @@ jobs:
               npm i -g detox-cli
               npm i -g react-native-cli
       - restore_cache:
-          key: osx-dependencies-{{ checksum "yarn.lock" }}
+          key: osx-dependencies-{{ checksum "package.json" }}
       - run:
           name: Install dependencies
           command: npm install
       - save_cache:
           paths:
             - /Users/distiller/project/node_modules
-          key: osx-dependencies-{{ checksum "yarn.lock" }}
+          key: osx-dependencies-{{ checksum "package.json" }}
       - run:
           name: Generate .env
           command: node ./scripts/generate-dotenv.js
