--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "contentful": "^5.0.5",
     "date-fns": "^1.29.0",
+    "lottie-react-native": "2.3.2",
     "ramda": "^0.25.0",
     "react": "16.2.0",
     "react-native": "0.54.2",
