try attach to workspace on mac machine

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -221,6 +221,8 @@ jobs:
     steps:
       - checkout:
           path: /Users/distiller/project
+      - attach_workspace:
+          at: /Users/distiller/project
       - run:
           name: Set Ruby Version
           command:  echo "ruby-2.4" > ~/.ruby-version
