--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,6 +8,9 @@ gems-key: &gems-key
   v1-gems-{{ checksum "Gemfile.lock" }}
 brew-key: &brew-key
   v1-brew-{{ checksum "BrewFile" }}
+android-artifacts-path: &android-artifacts-path
+  /Users/distiller/project/output
+# Dependency management anchors
 ruby-dependencies: &ruby-dependencies
   run:
     name: Download Ruby Dependencies
@@ -58,7 +61,7 @@ save-brew-cache: &save-brew-cache
     key: *brew-key
     paths:
       - /usr/local/Homebrew
-android-secrets: &android-secrets
+android-dev-secrets: &android-dev-secrets
   run:
     command: |
       git clone git@github.com:redbadger/pride-android-secrets.git
@@ -74,6 +77,27 @@ fabric-android-secrets: &fabric-android-secrets
   run:
     command: |
       echo -e "apiSecret=$FABRIC_BUILD_SECRET\napiKey=$FABRIC_API_KEY" >> ./app/fabric.properties
+# The following anchors are for usable pieces of our jobs
+docker-android-job-defaults: &docker-android-job-defaults:
+  working_directory: ~/project/android
+  docker:
+    - image: circleci/android:api-27-node8-alpha
+docker-android-env: &docker-android-env
+  TERM: dumb
+    LC_ALL: en_US.UTF-8
+    LANG: en_US.UTF-8
+docker-android-step-defaults: &docker-android-step-defaults
+  - checkout:
+      path: ~/project
+  - attach_workspace:
+      at: ~/project
+  - <<: *restore-gradle-cache
+  - <<: *restore-gems-cache
+  - <<: *ruby-dependencies
+  - <<: *android-dependencies
+  - <<: *save-gradle-cache
+  - <<: *save-gems-cache
+  - <<: *fabric-android-secrets
 
 version: 2
 jobs:
@@ -116,27 +140,13 @@ jobs:
             - .env
 
   alpha-android:
-    working_directory: ~/project/android
-    docker:
-      - image: circleci/android:api-27-node8-alpha
+    <<: *docker-android-job-defaults
     environment:
-      TERM: dumb
-      LC_ALL: en_US.UTF-8
-      LANG: en_US.UTF-8
+      <<: *docker-android-env
       APK_PATH: "./app/build/outputs/apk/alpha/release/app-alpha-release.apk"
     steps:
-      - checkout:
-          path: ~/project
-      - attach_workspace:
-          at: ~/project
-      - <<: *android-secrets
-      - <<: *fabric-android-secrets
-      - <<: *restore-gradle-cache
-      - <<: *restore-gems-cache
-      - <<: *ruby-dependencies
-      - <<: *android-dependencies
-      - <<: *save-gradle-cache
-      - <<: *save-gems-cache
+      - <<: *docker-android-step-defaults
+      - <<: *android-dev-secrets
       - run:
             command: |
                 bundle exec fastlane alpha \
@@ -149,30 +159,16 @@ jobs:
                 fabric_groups:$FABRIC_GROUPS \
                 commit_sha:$CIRCLE_SHA1
       - store_artifacts:
-          path: ~/project/android/app/build/outputs
+          path: *android-artifacts-path
 
   beta-android:
-    working_directory: ~/project/android
-    docker:
-      - image: circleci/android:api-27-node8-alpha
+    <<: *docker-android-job-defaults
     environment:
-      TERM: dumb
-      LC_ALL: en_US.UTF-8
-      LANG: en_US.UTF-8
+      <<: *docker-android-env
       APK_PATH: "./app/build/outputs/apk/beta/release/app-beta-release.apk"
     steps:
-      - checkout:
-          path: ~/project
-      - attach_workspace:
-          at: ~/project
-      - <<: *android-secrets
-      - <<: *fabric-android-secrets
-      - <<: *restore-gradle-cache
-      - <<: *restore-gems-cache
-      - <<: *ruby-dependencies
-      - <<: *android-dependencies
-      - <<: *save-gradle-cache
-      - <<: *save-gems-cache
+      - <<: *docker-android-step-defaults
+      - <<: *android-dev-secrets
       - run:
             command: |
                 bundle exec fastlane beta \
@@ -185,30 +181,16 @@ jobs:
                 fabric_groups:$FABRIC_GROUPS \
                 commit_sha:$CIRCLE_SHA1
       - store_artifacts:
-          path: ~/project/android/app/build/outputs
+          path: *android-artifacts-path
 
   release-android:
-    working_directory: ~/project/android
-    docker:
-      - image: circleci/android:api-27-node8-alpha
+    <<: *docker-android-job-defaults
     environment:
-      TERM: dumb
-      LC_ALL: en_US.UTF-8
-      LANG: en_US.UTF-8
+      <<: *docker-android-env
       APK_PATH: "./app/build/outputs/apk/production/release/app-production-release.apk"
     steps:
-      - checkout:
-          path: ~/project
-      - attach_workspace:
-          at: ~/project
+      - <<: *docker-android-step-defaults
       - <<: *android-release-secrets
-      - <<: *fabric-android-secrets
-      - <<: *restore-gradle-cache
-      - <<: *restore-gems-cache
-      - <<: *ruby-dependencies
-      - <<: *android-dependencies
-      - <<: *save-gradle-cache
-      - <<: *save-gems-cache
       - run:
             command: |
                 bundle exec fastlane release \
