Revert "see if anchors can be recursive"
This reverts commit 0f12eb08105971dbbdf2936b4582d29fda5188be.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -91,13 +91,13 @@ docker-android-step-defaults: &docker-android-step-defaults
       path: ~/project
   - attach_workspace:
       at: ~/project
-  # - <<: *restore-gradle-cache
-  # - <<: *restore-gems-cache
-  # - <<: *ruby-dependencies
-  # - <<: *android-dependencies
-  # - <<: *save-gradle-cache
-  # - <<: *save-gems-cache
-  # - <<: *fabric-android-secrets
+  - <<: *restore-gradle-cache
+  - <<: *restore-gems-cache
+  - <<: *ruby-dependencies
+  - <<: *android-dependencies
+  - <<: *save-gradle-cache
+  - <<: *save-gems-cache
+  - <<: *fabric-android-secrets
 
 version: 2
 jobs:
