--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -78,26 +78,26 @@ fabric-android-secrets: &fabric-android-secrets
     command: |
       echo -e "apiSecret=$FABRIC_BUILD_SECRET\napiKey=$FABRIC_API_KEY" >> ./app/fabric.properties
 # The following anchors are for usable pieces of our jobs
-docker-android-job-defaults: &docker-android-job-defaults:
+docker-android-job-defaults: &docker-android-job-defaults
   working_directory: ~/project/android
   docker:
     - image: circleci/android:api-27-node8-alpha
 docker-android-env: &docker-android-env
   TERM: dumb
-    LC_ALL: en_US.UTF-8
-    LANG: en_US.UTF-8
+  LC_ALL: en_US.UTF-8
+  LANG: en_US.UTF-8
 docker-android-step-defaults: &docker-android-step-defaults
-  - checkout:
-      path: ~/project
-  - attach_workspace:
-      at: ~/project
-  - <<: *restore-gradle-cache
-  - <<: *restore-gems-cache
-  - <<: *ruby-dependencies
-  - <<: *android-dependencies
-  - <<: *save-gradle-cache
-  - <<: *save-gems-cache
-  - <<: *fabric-android-secrets
+  checkout:
+    path: ~/project
+  attach_workspace:
+    at: ~/project
+  <<: *restore-gradle-cache
+  <<: *restore-gems-cache
+  <<: *ruby-dependencies
+  <<: *android-dependencies
+  <<: *save-gradle-cache
+  <<: *save-gems-cache
+  <<: *fabric-android-secrets
 
 version: 2
 jobs:
